--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -4,9 +4,12 @@ pipeline{
     agent none
     stages {
         stage('Build'){
-            echo "Testando build"
+        	agent{
+        	    	docker { image 'maven'}
+        	    }
+        	steps{
+        	    sh "mvn package -Dmaven.test.skip=true"
         }
-
-    }
-
+     }
+   }
 }
