--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline{
     stages {
         stage('Build'){
         	agent{
-        	    	docker { image 'maven'}
+        	    	echo "Build finalizado"
         	    }
         	steps{
         	    sh "mvn package -Dmaven.test.skip=true"
