--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,15 +1,13 @@
 //!/usr/bin/env groovy
 
-pipeline{
-    agent none
-    stages {
-        stage('Build'){
+node{
+    stage('Build'){
         	agent{
-        	    	echo "Build finalizado"
+        	    	echo 'Build finalizado'
+        	    	sh '/opt/maven/bin/mvn -v'
         	    }
         	steps{
-        	    sh "mvn package -Dmaven.test.skip=true"
+        	    sh 'mvn package -Dmaven.test.skip=true'
         }
      }
    }
-}
