--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -11,7 +11,7 @@ node{
     	echo 'Realizando Deploy...'
     	deploy adapters: [tomcat9(credentialsId: '190814f7-9a8e-4270-a9b2-5fe4bdf6cbb4', 
     						path: '', url: 'http://20.201.48.197:8080')], 
-    						contextPath: 'deploying-spring-boot-as-war-on-tomcat', war: '**/*.war'
+    						contextPath: 'deploying-spring-boot-as-war-on-tomcat', war: 'deploying-spring-boot-as-war-on-tomcat.war'
         
         echo 'Deploy finalizado.'
     }
