Deploy Stage in development.

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,16 +2,17 @@
 
 node{
     stage('Build'){
+    		build 'teste def'
         	sh '/opt/maven/bin/mvn -v'
         	echo 'Realizando Build...'
         	echo 'Build finalizado.'
     }
     
     stage('Deploy'){
-    	echo 'Realizando Deploy...'
+    echo 'Realizando Deploy...'
     	deploy adapters: [tomcat9(credentialsId: '190814f7-9a8e-4270-a9b2-5fe4bdf6cbb4', 
     						path: '', url: 'http://20.201.48.197:8080')], 
-    						contextPath: 'deploying-spring-boot-as-war-on-tomcat', war: 'deploying-spring-boot-as-war-on-tomcat.war'
+    						contextPath: 'deploying-spring-boot-as-war-on-tomcat', war: '**/*.war'
         
         echo 'Deploy finalizado.'
     }
