--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,9 +2,9 @@
 
 pipeline{
 	agent any
-	environment {
-	    PATH = '/opt/apache-maven-3.6.3/bin:$PATH'
-	}
+	tools {
+    	maven 'M3'
+  	}
 	stages{
 	   	stage('Build'){
 	   		steps{
