--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -17,13 +17,10 @@ pipeline{
     	stage('Deploy'){
     		steps{
     	    	echo 'Realizando Deploy...'
-    	    	deploy adapters: [jboss7(credentialsId: '190814f7-9a8e-4270-a9b2-5fe4bdf6cbb4',
-    	    	 url: 'http://localhost:9000')], 
-    	    	 contextPath: 'deploying-spring-boot-as-war-on-tomcat', 
-    	    	 onFailure: false, war: '**/*.war'
-    			//deploy adapters: [tomcat9(credentialsId: '190814f7-9a8e-4270-a9b2-5fe4bdf6cbb4', 
-    			//					path: '', url: 'http://20.201.48.197:8080')], 
-    			//					contextPath: 'deploying-spring-boot-as-war-on-tomcat', war: '**/*.war'
+    	    	
+    			deploy adapters: [tomcat9(credentialsId: '190814f7-9a8e-4270-a9b2-5fe4bdf6cbb4', 
+    								path: '', url: 'http://20.201.48.197:8080')], 
+    								contextPath: 'deploying-spring-boot-as-war-on-tomcat', war: '**/*.war'
         		echo 'Deploy finalizado.'
     		}
 		}
