Deploy Stage in development.

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -18,9 +18,7 @@ pipeline{
     		steps{
     	    	echo 'Realizando Deploy...'
     	    	
-    			deploy adapters: [tomcat9(credentialsId: '190814f7-9a8e-4270-a9b2-5fe4bdf6cbb4', 
-    								path: '', url: 'http://20.201.48.197:8080')], 
-    								contextPath: 'deploying-spring-boot-as-war-on-tomcat', war: '**/*.war'
+    			deploy adapters: [tomcat9(credentialsId: '964d2638-f808-4d6a-9ad3-c681d7e74d9e', path: '', url: 'http://localhost:8080')], contextPath: 'deploying-spring-boot-as-war-on-tomcat', onFailure: false, war: '**/*.war'
         		echo 'Deploy finalizado.'
     		}
 		}
